--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,6 +4,7 @@
 <form method="POST" enctype="multipart/form-data" action="{{ url_for('register') }}">
     {{ username_form.hidden_tag() }}
     <p>Email: {{ username_form.user_email }} <span style="color:red">{{ username_form.user_email.errors }}</span></p>
+    <p>Picture: {{ username_form.user_picture }} <span style="color:red">{{ username_form.user_picture.errors }}</span></p>
     <p>Name: {{ username_form.user_name }} <span style="color:red">{{ username_form.user_name.errors }}</span></p>
     <p>Password: {{ username_form.user_password }} <span style="color:red">{{ username_form.user_password.errors }}</span></p>
     <p>Confirm Password: {{ username_form.confirm }} <span style="color:red">{{ username_form.confirm.errors }}</span></p>
