--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,49 +1,67 @@
 {% extends "layout.html" %}
 {% block content %}
-<a href="/logout">logout</a>
+<a href="/logout">Logout</a>
 <br>
-<h3>Games added:</h3>
-<li>
-    {%if user_games %}
-    {% for games in user_games %}
-        <a href="/game/{{games.id}}">{{games.name}}</a>
-        {% if not loop.last %}  ,{% endif %}
-    {% endfor %}
-{% else %}
-    You added no games <a href="/add_game">add game?</a>
-{% endif %}
-</li>
-<h3>Founders added:</h3>
-<li>
-    {% if user_founders %}
-        {% for founder in user_founders %}
-            <a href="/founder/{{founder.id}}">{{founder.name}}</a>
-            {% if not loop.last %}  ,{% endif %}
-        {% endfor %}
-    {% else %}
-        No founders added yet, <a href="/add_founder">add founder?</a>
-    {% endif %}
-</li>
-<h3>Companies added:</h3>
-<li>
-    {% if user_companies %}
-        {% for company in user_companies %}
-            <a href="/company/{{company.id}}">{{company.name}}</a>
-            {% if not loop.last %}  ,{% endif %}
-        {% endfor %}
-    {% else %}
-        No companies added yet, <a href="/add_company">add company?</a>
-    {% endif %}
-</li>
-<h3>Added directors:</h3>
-<li>
-    {% if user_directors %}
-        {% for director in user_directors %}
-            <a href="/director/{{director.id}}">{{director.name}}</a>
-            {% if not loop.last %}  ,{% endif %}
-        {% endfor %}
-    {% else %}
-        No directors added yet, <a href="/add_directors">add director?</a>
-    {% endif %}
-</li>
+
+<!-- Buttons to toggle the content -->
+<div>
+    <button onclick="showSection('games')">Games</button>
+    <button onclick="showSection('founders')">Founders</button>
+    <button onclick="showSection('companies')">Companies</button>
+    <button onclick="showSection('directors')">Directors</button>
+</div>
+
+<!-- Sections that will be shown/hidden -->
+<div id="games" class="section">
+    <h3>Games added:</h3>
+    <ul>
+        {% if user_games %}
+            {% for games in user_games %}
+                <li><a href="/game/{{games.id}}">{{games.name}}</a></li>
+            {% endfor %}
+        {% else %}
+            <li>You added no games <a href="/add_game">Add game?</a></li>
+        {% endif %}
+    </ul>
+</div>
+
+<div id="founders" class="section" style="display:none;">
+    <h3>Founders added:</h3>
+    <ul>
+        {% if user_founders %}
+            {% for founder in user_founders %}
+                <li><a href="/founder/{{founder.id}}">{{founder.name}}</a></li>
+            {% endfor %}
+        {% else %}
+            <li>No founders added yet, <a href="/add_founder">Add founder?</a></li>
+        {% endif %}
+    </ul>
+</div>
+
+<div id="companies" class="section" style="display:none;">
+    <h3>Companies added:</h3>
+    <ul>
+        {% if user_companies %}
+            {% for company in user_companies %}
+                <li><a href="/company/{{company.id}}">{{company.name}}</a></li>
+            {% endfor %}
+        {% else %}
+            <li>No companies added yet, <a href="/add_company">Add company?</a></li>
+        {% endif %}
+    </ul>
+</div>
+
+<div id="directors" class="section" style="display:none;">
+    <h3>Added directors:</h3>
+    <ul>
+        {% if user_directors %}
+            {% for director in user_directors %}
+                <li><a href="/director/{{director.id}}">{{director.name}}</a></li>
+            {% endfor %}
+        {% else %}
+            <li>No directors added yet, <a href="/add_directors">Add director?</a></li>
+        {% endif %}
+    </ul>
+</div>
+
 {% endblock %}
