--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -6,7 +6,7 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="/static/script.js"></script>
     </head>
-    <body>
+    <body  id="test">
         <header>
             {% include 'nav.html' %}
         </header>
