--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -3,17 +3,39 @@
         <a href="/admin">Admin</a>
     {% else %}
     {% endif %}
-    <a href="/">Games</a>
-    <a href="/company_list">Companies</a>
-    <a href="/director_list">Directors</a>
-    <a href="/founder_list">Founders</a>
-    <a href="/add_game">Add game</a>
-    <a href="/add_directors">Add director</a>
-    <a href="/add_company">Add company</a>
-    <a href="/add_founder">Add founder</a>
-    <a href="/user_list">Users</a>
+    
+    <!-- Lists Dropdown -->
+    <div class="dropdown">
+        <button class="dropbtn">Lists <span class="arrow-down">&#9662;</span></button>
+        <div class="dropdown-content">
+            <a href="/">Games</a>
+            <a href="/company_list">Companies</a>
+            <a href="/director_list">Directors</a>
+            <a href="/founder_list">Founders</a>
+            <a href="/user_list">Users</a>
+        </div>
+    </div>
+    
+    <!-- Add Stuff Dropdown -->
+    <div class="dropdown">
+        <button class="dropbtn">Add Stuff <span class="arrow-down">&#9662;</span></button>
+        <div class="dropdown-content">
+            <a href="/add_game">Add Game</a>
+            <a href="/add_company">Add Company</a>
+            <a href="/add_directors">Add Director</a>
+            <a href="/add_founder">Add Founder</a>
+        </div>
+    </div>
+    
     {% if session.get('user_id') %}
-        <a href='/dashboard/{{session["user_id"]}}'>{{session["user_name"]}}</a>
+        <div class="dropdown">
+            <button class="dropbtn">{{session['user_name']}} <span class="arrow-down">&#9662;</span></button>
+            <div class="dropdown-content">
+            <a href='/dashboard/{{session["user_id"]}}'>Dashboard</a>
+            <a href="/logout">Logout</a>
+            </div>    
+        </div>
+        
     {% else %}
         <a href="/login">Login</a>
     {% endif %}
