--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -1,16 +1,24 @@
 {% extends "layout.html" %}
 {% block content %}
 
+<div class="page-name">
+    <h1>{{game.name}}</h1>
+</div>
+
+
+<br>
 <ul>
     <!-- Picture 1, Red Line, and Text Row -->
     <li>
         <div class="image-text-row">
             {% if game.picture_1 %}
             <img src="{{ url_for('static', filename='games_images/' ~ game.picture_1) }}" alt="Game Picture 1" class="images-size">
+            {% else %}
+            <img src="{{ url_for('static', filename='games_images/default_image.jpg') }}" alt="Default Game Picture" class="images-size">
+            {% endif %}
             <hr class="red-line">
             <div class="text-content">
                 <p>{% if game.Username.name %}Added by: <a href='/dashboard/{{game.Username.id}}'>{{ game.Username.name }}</a>{% else %}Added by dev{% endif %}</p>
-                <p>Name: {{game.name}}</p>
                 <p>Director(s):
                     {% if game_directors %}
                         {% for director in game_directors[:3] %}
@@ -47,23 +55,24 @@
                 <p>Series: {{ game.Series.name }}</p>
                 <p>Release date: {{game.release_date}}</p>
             </div>
-            {% endif %}
         </div>
-        <hr class="white-line">
+        <hr class="red-h-line">
     </li>
     <li class="title">Description</li>
     <!-- Picture 2, Red Line, and Text Row -->
     <li>
         <div class="image-text-row">
-            {% if game.picture_2 %}
-            <img src="{{ url_for('static', filename='games_images/' ~ game.picture_2) }}" alt="Game Picture 2" class="images-size">
-            <hr class="red-line">
             <div class="text-content">
                 <p>{{game.description}}</p>
             </div>
+            <hr class="red-line">
+            {% if game.picture_2 %}
+            <img src="{{ url_for('static', filename='games_images/' ~ game.picture_2) }}" alt="Game Picture 2" class="images-size">
+            {% else %}
+            <img src="{{ url_for('static', filename='games_images/default_image.jpg') }}" alt="Default Game Picture" class="images-size">
             {% endif %}
         </div>
-        <hr class="white-line">
+        <hr class="red-h-line">
     </li>
     <li class="title">Gameplay</li>
     <!-- Picture 3, Red Line, and Text Row -->
@@ -71,27 +80,31 @@
         <div class="image-text-row">
             {% if game.picture_3 %}
             <img src="{{ url_for('static', filename='games_images/' ~ game.picture_3) }}" alt="Game Picture 3" class="images-size">
+            {% else %}
+            <img src="{{ url_for('static', filename='games_images/default_image.jpg') }}" alt="Default Game Picture" class="images-size">
+            {% endif %}
             <hr class="red-line">
             <div class="text-content">
                 <p>{{game.gameplay}}</p>
             </div>
-            {% endif %}
         </div>
-        <hr class="white-line">
+        <hr class="red-h-line">
     </li>
     <li class="title">Story</li>
     <!-- Picture 4, Red Line, and Text Row -->
     <li>
         <div class="image-text-row">
-            {% if game.picture_4 %}
-            <img src="{{ url_for('static', filename='games_images/' ~ game.picture_4) }}" alt="Game Picture 4" class="images-size">
-            <hr class="red-line">
             <div class="text-content">
                 <p>{{game.story}}</p>
             </div>
+            <hr class="red-line">
+            {% if game.picture_4 %}
+            <img src="{{ url_for('static', filename='games_images/' ~ game.picture_4) }}" alt="Game Picture 4" class="images-size">
+            {% else %}
+            <img src="{{ url_for('static', filename='games_images/default_image.jpg') }}" alt="Default Game Picture" class="images-size">
             {% endif %}
         </div>
-        <hr class="white-line">
+        <hr class="red-h-line">
     </li>
     <li class="title">Soundtrack</li>
     <!-- Picture 5, Red Line, and Text Row -->
@@ -99,24 +112,28 @@
         <div class="image-text-row">
             {% if game.picture_5 %}
             <img src="{{ url_for('static', filename='games_images/' ~ game.picture_5) }}" alt="Game Picture 5" class="images-size">
+            {% else %}
+            <img src="{{ url_for('static', filename='games_images/default_image.jpg') }}" alt="Default Game Picture" class="images-size">
+            {% endif %}
             <hr class="red-line">
             <div class="text-content">
                 <p>{{game.soundtrack}}</p>
             </div>
-            {% endif %}
         </div>
-        <hr class="white-line">
+        <hr class="red-h-line">
     </li>
     <li class="title">Reviews</li>
     <!-- Picture 6, Red Line, and Text Row -->
     <li>
         <div class="image-text-row">
-            {% if game.picture_6 %}
-            <img src="{{ url_for('static', filename='games_images/' ~ game.picture_6) }}" alt="Game Picture 6" class="images-size">
-            <hr class="red-line">
             <div class="text-content">
                 <p>{{game.reviews}}</p>
             </div>
+            <hr class="red-line">
+            {% if game.picture_6 %}
+            <img src="{{ url_for('static', filename='games_images/' ~ game.picture_6) }}" alt="Game Picture 6" class="images-size">
+            {% else %}
+            <img src="{{ url_for('static', filename='games_images/default_image.jpg') }}" alt="Default Game Picture" class="images-size">
             {% endif %}
         </div>
     </li>
